# Permission-Set-Comparator

./: CMakeLists.txt  LICENSE  Permission Sets.csv  README.md  SalesforcePermCalc.spec  perm_set_calculator.cpp  requirements.txt  resources.rc
